# GermanyWindCast

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
config/: general_config.yaml  hyperparameters.yaml
data/nwp/: icon_d2.csv  icon_eu.csv
data/processed/: dataset_gl_scaled.csv  dataset_lc_scaled.csv  eval_indices.csv  global_scalers.pkl  local_scalers.pkl  test_indices.csv  train_indices.csv
data/processed/10min/: dataset_gl_scaled.csv  dataset_lc_scaled.csv
data/processed/10minres/: eval.csv  scalers.pkl  test.csv  train.csv
data/processed/1h/: dataset_gl_scaled.csv  dataset_lc_scaled.csv
data/processed/1hres/: eval.csv  scalers.pkl  test.csv  train.csv
data/processed/20min/: dataset_gl_scaled.csv  dataset_lc_scaled.csv
data/processed/20minres/: eval.csv  scalers.pkl  (+2 more)
data/raw/: complete_dataset.csv  complete_raw_dataset_wide.csv  dataset.csv  station_metadata.csv
data/results/: temporal_analysis.csv
data/scripts/: build_dataset.py
experiments/: feature_selection.py
notebooks/: exploratory_data_analysis.ipynb  feature_selection.ipynb  model_evaluation.ipynb  spatial_analysis.ipynb  temporal_analysis.ipynb
src/: train.py
src/GermanyWindCast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/data/: build_dataset.py  datasets.py  preprocessing.py
src/experiments/: config.py  feature_selection.py  spatial_analysis.py  temporal_analysis.py
src/models/: models.py
src/utils/: constants.py  data_utils.py  evaluation_utils.py  experiment_utils.py  model_utils.py
sweeps/: mlp_opt.yaml
utils/: constants.py
(+1912 files in other folders)
