[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GermanyWindCast"
version = "0.1.0"
description = "Code for Bachelor's Thesis of Quirin Brandl"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Quirin Brandl"}
]

dependencies = [
    "torch==2.7.0+cu126",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "windrose>=1.8.0",
    "geopandas>=0.13.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "scikit-learn>=1.3.0",
    "wandb>=0.15.0",
    "torchinfo>=1.8.0",
    "torch-geometric>=2.4.0",
    "haversine>=2.8.0",
]