[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GermanyWindCast"
version = "0.1.0"
description = "Code for Bachelor's Thesis of Quirin Brandl"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Quirin Brandl"}
]

dependencies = [] #see requirements.txt